fix whitespace issues

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -26,3 +26,8 @@
   .twitter-typeahead {
     width: 100%;
   }
+
+  header {
+    margin-top: 1.25em;
+    margin-bottom: 0.5em;
+  }
